add_executable(row_matrix_vector_multiply row_matrix_vector_multiply.c)
add_executable(col_matrix_vector_multiply col_matrix_vector_multiply.c)
add_executable(block_matrix_vector_multiply block_matrix_vector_multiply.c)

target_link_libraries(row_matrix_vector_multiply utils)
target_link_libraries(col_matrix_vector_multiply utils)
target_link_libraries(block_matrix_vector_multiply utils)

target_link_libraries(row_matrix_vector_multiply ${MPI_LIBRARIES})
target_link_libraries(col_matrix_vector_multiply ${MPI_LIBRARIES})
target_link_libraries(block_matrix_vector_multiply ${MPI_LIBRARIES})
